# sortingnetwork-tauri-app

./: Cargo.toml  README.md
.github/workflows/: build.yml
apps/src-tauri/: Cargo.toml  Tauri.toml
apps/src-tauri/icons/: icon.icns
apps/src-tauri/src/: commands.rs  lib.rs  main.rs  sorting_network_check_v2.rs  threadpool.rs
apps/src-ui/: Cargo.toml  Trunk.toml  styles.css
apps/src-ui/src/: app.rs  main.rs
apps/src-ui/src/components/: mod.rs  sorting_network_opts.rs  sorting_network_verify.rs
