[package]
name = "src-ui"
version = "0.1.0"
#edition = "2021"
edition.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
thaw = { version = "0.4", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
futures = "0.3"
console_log = "1.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["all"] }
log = "0.4"
web-sys = "0.3"
#leptos-use = "0.15"
